# finfetcher

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: documentation.yml  python-package.yml
docs/: api.md  configuration.md  index.md  usage.md
src/finfetcher/: __init__.py  config.py  core.py  exceptions.py
src/finfetcher/services/: fetch_data.py
tests/: test_core_mock.py  test_custom_config.py  test_integration.py  test_logic.py
